# saddle-world-lighting

./: Cargo.toml  README.md  __data.json  index.html
.github/workflows/: ci.yaml
_app/: version.json
_app/immutable/chunks/: B8sy5agm.js  Bm0CVmGT.js  CofiqCkS.js  DOHv9g1l.js  ieG_UqMN.js
_app/immutable/entry/: app.BDaQPGE4.js  start.BGN4sgfa.js
_app/immutable/nodes/: 0.D0ox9DXj.js  1.Bus7SFiB.js  2.CTTHeGoX.js  3.CiF05Y4Y.js  4.4w2rYOhu.js
demo/basic/: index.html
demo/fixed_time/: index.html
demo/full_cycle/: index.html
demo/lab/: index.html
demo/latitude/: index.html
demo/street_lights/: index.html
demos/basic/: index.html
demos/fixed_time/: index.html
demos/full_cycle/: index.html
demos/lab/: index.html
demos/latitude/: index.html
demos/street_lights/: index.html
docs/: architecture.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/fixed_time/: Cargo.toml
examples/fixed_time/src/: main.rs
examples/full_cycle/: Cargo.toml
examples/full_cycle/src/: main.rs
examples/lab/: Cargo.toml
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs  support.rs
examples/latitude/: Cargo.toml
examples/latitude/src/: main.rs
examples/street_lights/: Cargo.toml
examples/street_lights/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
src/: celestial.rs  celestial_tests.rs  components.rs  config.rs  gradient.rs  gradient_tests.rs  lib.rs  lighting.rs  lighting_tests.rs  systems.rs  systems_tests.rs
